Bug 475621.  Make saving an iframe which points to an image work when doing "save page, complete".  r+sr=bzbarsky